Changing title to my name, removed icon

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- Basic Page Needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Ceevee - Free Responsive HTML5/CSS3 Template</title>
+	<title>Micah Harker</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -25,10 +25,6 @@
    <!-- Script
    ================================================== -->
 	<script src="js/modernizr.js"></script>
-
-   <!-- Favicons
-	================================================== -->
-	<link rel="shortcut icon" href="favicon.png" >
 
 </head>
 
