Added work experience and education

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
          <div class="three columns">
 
-            <img class="profile-pic"  src="Desktop/GithubCV/cv_profile_image.png" alt="" />
+            <img class="profile-pic"  src="cv_profile_image.png" alt="" />
 
          </div>
 
@@ -96,9 +96,8 @@
                   <h2>Contact Details</h2>
                   <p class="email">
 						   <span>Micah Harker</span><br>
-						   <span>micah.harker@gmail.com<br>
-                     </span><br>
-						   <span>(765)201-5835</span><br>
+						   <span>micah.harker@gmail.com</span>
+						   <span>(765)-201-5835</span><br>
 					   </p>
 
                </div>
@@ -132,45 +131,45 @@
 
          <div class="nine columns main-col">
 
-            <div class="row item">
+             <div class="row item">
 
-               <div class="twelve columns">
+                 <div class="twelve columns">
 
-                  <h3>University of Life</h3>
-                  <p class="info">Master in Graphic Design <span>&bull;</span> <em class="date">April 2007</em></p>
+                     <h3>Twin Lakes High School</h3>
+                     <p class="info">High School Diploma (Academic and Technical Honors) <span>&bull;</span> <em class="date">May 2024</em></p>
 
-                  <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-                  ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-                  Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
-                  </p>
+                     <p>
+                      In high school I took every programming class I could, participated in many extra curriculars, and worked
+                      part time so that I could support my own travel expenses and food. Here I learned how to code in C++, Visual Basic,
+                      and did some Java for my robotics team. I made mobile apps, windows applications, programmed for the robotics team,
+                      participated in CyberPatriots, completed dual credits, and got a Microsoft certification in Software Development.
+                     </p>
 
-               </div>
+                 </div>
 
-            </div> <!-- item end -->
+             </div> <!-- item end -->
 
-            <div class="row item">
+             <div class="row item">
 
-               <div class="twelve columns">
+                 <div class="twelve columns">
 
-                  <h3>School of Cool Designers</h3>
-                  <p class="info">B.A. Degree in Graphic Design <span>&bull;</span> <em class="date">March 2003</em></p>
+                     <h3>Ball State University</h3>
+                     <p class="info">B.A in Computer Science <span>&bull;</span> <em class="date">May 2024</em></p>
 
-                  <p>
-                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
-                  ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
-                  </p>
+                     <p>
+                         During the time I spent at Ball State I took classes for Databases, Web Programming, Networking, and Software Development.
+                         I've worked on many projects, both alone and with teams, and have gained experience in multiple programming
+                         languages and IDE's. I learned invaluable skills about teamwork and software development. My time at this university
+                         helped me grow professionally and as an individual. I made many friends and became competent in time management and
+                         work ethic.
+                     </p>
 
-               </div>
+                 </div>
+                 </div>
 
-            </div> <!-- item end -->
+             </div> <!-- main-col end -->
 
-         </div> <!-- main-col end -->
-
-      </div> <!-- End Education -->
+         </div> <!-- End Education -->
 
 
       <!-- Work
@@ -187,14 +186,15 @@
 
                <div class="twelve columns">
 
-                  <h3>Awesome Design Studio</h3>
-                  <p class="info">Senior UX Designer <span>&bull;</span> <em class="date">March 2010 - Present</em></p>
+                  <h3>Instructional Classroom Support Services </h3>
+                  <p class="info"> Support Technician <span>&bull;</span> <em class="date">January 2023 - Present</em></p>
 
                   <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-                  ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-                  Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
+                    This position is technical support for campus classrooms at Ball State. Here I travel around campus
+                    helping instructors solve their issues with classroom technology. This includes classroom computers,
+                    their own personal devices, and the audio visual equipment in the classrooms themselves. I have gained
+                    skills in tech support, audio visual equipment, and have had opportunities to connect with professors
+                    across campus.
                   </p>
 
                </div>
@@ -205,14 +205,14 @@
 
                <div class="twelve columns">
 
-                  <h3>Super Cool Studio</h3>
-                  <p class="info">UX Designer <span>&bull;</span> <em class="date">March 2007 - February 2010</em></p>
+                  <h3>Target</h3>
+                  <p class="info">Starbucks Barista <span>&bull;</span> <em class="date">August 2021 - Present</em></p>
 
                   <p>
-                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
-                  ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
+                    Working as a barista has been a good job to support my living expenses in college. It's taught me what
+                    it means to be a good employee. Having worked here for 2 years now I am well known, respected, and valued
+                    at the store. I have received 2 raises and have learned good communication and teamwork skills. I can also 
+                    make a mean cup of joe.
                   </p>
 
                </div>
@@ -243,12 +243,12 @@
 				<div class="bars">
 
 				   <ul class="skills">
-					   <li><span class="bar-expand photoshop"></span><em>Photoshop</em></li>
-                  <li><span class="bar-expand illustrator"></span><em>Illustrator</em></li>
-						<li><span class="bar-expand wordpress"></span><em>Wordpress</em></li>
-						<li><span class="bar-expand css"></span><em>CSS</em></li>
-						<li><span class="bar-expand html5"></span><em>HTML5</em></li>
-                  <li><span class="bar-expand jquery"></span><em>jQuery</em></li>
+					   <li><span class="bar-expand photoshop"></span>IntelliJ<em></em></li>
+                  <li><span class="bar-expand illustrator"></span><em>Visual Studio</em></li>
+						<li><span class="bar-expand wordpress"></span><em>Java, Python, C++</em></li>
+						<li><span class="bar-expand css"></span><em>HTML, CSS, JavaScript</em></li>
+						<li><span class="bar-expand html5"></span><em>SQL, MongoDB</em></li>
+                  <li><span class="bar-expand jquery"></span><em>GODOT</em></li>
 					</ul>
 
 				</div><!-- end skill-bars -->
