Added profile image, and fixed about me formatting

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
          <div class="three columns">
 
-            <img class="profile-pic"  src="cv_profile_image.png" alt="" />
+            <img class="profile-pic"  src="cv_profile_image.jpg" alt="" />
 
          </div>
 
@@ -96,7 +96,7 @@
                   <h2>Contact Details</h2>
                   <p class="email">
 						   <span>Micah Harker</span><br>
-						   <span>micah.harker@gmail.com</span>
+						   <span>micah.harker@gmail.com</span><br>
 						   <span>(765)-201-5835</span><br>
 					   </p>
 
@@ -234,10 +234,8 @@
 
          <div class="nine columns main-col">
 
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt.
+            <p>Here are the programming languages, IDEs, and various tools I've developed skills with during my time
+             becoming a software developer'
             </p>
 
 				<div class="bars">
