Created spots for portfolio projects

--- a/index.html
+++ b/index.html
@@ -262,22 +262,56 @@
    ================================================== -->
    <section id="portfolio">
 
-      <div class="row">
+       <div class="row work">
 
-         <div class="twelve columns collapsed">
+           <div class="three columns header-col">
+               <h1><span>Check Out Some of My Works</span></h1>
+           </div>
 
-            <h1>Check Out Some of My Works.</h1>
+           <div class="nine columns main-col">
 
-            <!-- portfolio-wrapper -->
-            <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf">
+               <div class="row item">
 
+                   <div class="twelve columns">
 
+                       <h3>Project 1</h3>
+                       <p class="info"> Support Technician <span>&bull;</span> <em class="date">January 2023 - Present</em></p>
 
-            </div>
+                       <p>
+                           project description
+                       </p>
 
-            </div> <!-- portfolio-wrapper end -->
+                   </div>
+               </div>
+           </div> <!-- item end -->
 
-         </div> <!-- twelve columns end -->
+           <div class="row item">
+
+               <div class="twelve columns">
+
+                   <h3>Project 2</h3>
+                   <p class="info"> Support Technician <span>&bull;</span> <em class="date">January 2023 - Present</em></p>
+
+                   <p>
+                       project description
+                   </p>
+
+               </div>
+           </div>
+           <div class="row item">
+
+               <div class="twelve columns">
+
+                   <h3>Project 3</h3>
+                   <p class="info"> Support Technician <span>&bull;</span> <em class="date">January 2023 - Present</em></p>
+
+                   <p>
+                       project description
+                   </p>
+
+               </div>
+           </div>
+       </div>
 
    </section> <!-- Portfolio Section End-->
 
