Removed unneccessary navigation links

--- a/index.html
+++ b/index.html
@@ -44,8 +44,6 @@
             <li><a class="smoothscroll" href="#about">About</a></li>
 	         <li><a class="smoothscroll" href="#resume">Resume</a></li>
             <li><a class="smoothscroll" href="#portfolio">Works</a></li>
-            <li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>
-            <li><a class="smoothscroll" href="#contact">Contact</a></li>
          </ul> <!-- end #nav -->
 
       </nav> <!-- end #nav-wrap -->
@@ -265,7 +263,7 @@
        <div class="row work">
 
            <div class="three columns header-col">
-               <h1><span>Check Out Some of My Works</span></h1>
+               <h1><span>My Works</span></h1>
            </div>
 
            <div class="nine columns main-col">
