Added project spots for portfolio

--- a/index.html
+++ b/index.html
@@ -272,15 +272,11 @@
 
                    <div class="twelve columns">
 
-                       <h3>Instructional Classroom Support Services </h3>
+                       <h3>Project 1 </h3>
                        <p class="info"> Support Technician <span>&bull;</span> <em class="date">January 2023 - Present</em></p>
 
                        <p>
-                           This position is technical support for campus classrooms at Ball State. Here I travel around campus
-                           helping instructors solve their issues with classroom technology. This includes classroom computers,
-                           their own personal devices, and the audio visual equipment in the classrooms themselves. I have gained
-                           skills in tech support, audio visual equipment, and have had opportunities to connect with professors
-                           across campus.
+                           project description
                        </p>
 
                    </div>
@@ -291,14 +287,11 @@
 
                    <div class="twelve columns">
 
-                       <h3>Target</h3>
+                       <h3>Project 2</h3>
                        <p class="info">Starbucks Barista <span>&bull;</span> <em class="date">August 2021 - Present</em></p>
 
                        <p>
-                           Working as a barista has been a good job to support my living expenses in college. It's taught me what
-                           it means to be a good employee. Having worked here for 2 years now I am well known, respected, and valued
-                           at the store. I have received 2 raises and have learned good communication and teamwork skills. I can also
-                           make a mean cup of joe.
+                           project description
                        </p>
 
                    </div>
