--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
        <div class="row work">
 
            <div class="three columns header-col">
-               <h1><span>Work</span></h1>
+               <h1><span>Projects</span></h1>
            </div>
 
            <div class="nine columns main-col">
