Fixed IntelliJ in skills section

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 				<div class="bars">
 
 				   <ul class="skills">
-					   <li><span class="bar-expand photoshop"></span>IntelliJ<em></em></li>
+					   <li><span class="bar-expand photoshop"></span><em>IntelliJ</em></li>
                   <li><span class="bar-expand illustrator"></span><em>Visual Studio</em></li>
 						<li><span class="bar-expand wordpress"></span><em>Java, Python, C++</em></li>
 						<li><span class="bar-expand css"></span><em>HTML, CSS, JavaScript</em></li>
