Added about me paragraph, new background image, and projects

--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
 
             <h2>About Me</h2>
 
-            <p>About me goes here.
+            <p>Hello! I'm Micah Harker. I'm a 24 year old college student in their senior year of Bachelor's Degree in Computer Science.
+             I've been coding since I was a teenager and I'm excited to turn it into a career. I've done all sorts of different projects,
+             ranging from robotics, to websites, to game programming. I love music, the outdoors, video games, and my wonderful cat Analise.
             </p>
 
             <div class="row">
@@ -272,11 +274,15 @@
 
                    <div class="twelve columns">
 
-                       <h3>Project 1 </h3>
-                       <p class="info"> Support Technician <span>&bull;</span> <em class="date">January 2023 - Present</em></p>
+                       <h3>Slay the Dragon</h3>
+                       <p class="info"> Programming 1<span>&bull;</span> <em class="date">High School</em></p>
 
                        <p>
-                           project description
+                           Slay the Dragon was a fully built mobile game that I made as a senior in high school. I did this using MIT App Inventor. It was
+                           a simple game where you play as a bow and arrow at the bottom of the screen and shoot at dragons flying around. I had to
+                           use some physics and geometry to make these player controls and projectiles behave how I wanted. The enemies, or dragons,
+                           had their own behaviors as well. Each level they would fly in different patterns and shoot different types of projectiles at
+                           you. The game was fleshed out with three levels and a bonus level for beating the game. The bonus level you would play as the dragon.
                        </p>
 
                    </div>
@@ -287,17 +293,41 @@
 
                    <div class="twelve columns">
 
-                       <h3>Project 2</h3>
-                       <p class="info">Starbucks Barista <span>&bull;</span> <em class="date">August 2021 - Present</em></p>
+                       <h3>Mindfulness</h3>
+                       <p class="info">Programming Fundamentals<span>&bull;</span> <em class="date">Freshman Year: Ball State University</em></p>
 
                        <p>
-                           project description
+                           Mindfulness was my end of the year project for the intro programming class. We used Jython to manipulate pixels
+                           in image files. The goal of the project was to create an interesting artwork from images, similar to how you
+                           might in Photoshop, just using code. We were judged on how clean and efficient our code was, as well as how
+                           good the product looked aesthetically. My project was an image of a man meditating. It was mirrored vertically,
+                           with the bottom half being a negative of the photo. The top half was separated into layers of rectangles with
+                           different colors, and there was an eye added to the man's forehead. My project made it into the display at the end
+                           of the year.
                        </p>
 
                    </div>
 
                </div> <!-- item end -->
 
+               <div class="row item">
+
+                   <div class="twelve columns">
+
+                       <h3>Online Shopping Program</h3>
+                       <p class="info">Database Design<span>&bull;</span> <em class="date">Junior Year: Ball State University</em></p>
+
+                       <p>
+                           This was the third project in our Database Design class. I used mySQL and Python to create a program where
+                           the user could create an account, search products by category or product ID, add or remove products from their cart, 
+                           or exit the program. User account info would be entered each time the program ran, and their cart would be saved.
+                           There was no GUI, as this was an assignment graded on functionality. The program would connect to my database, hosted
+                           locally on my laptop, and then it search, add, and remove data from that database as needed.
+                       </p>
+
+                   </div>
+
+               </div> <!-- item end -->
            </div> <!-- main-col end -->
 
        </div> <!-- End Work -->
