Update Resume Section and Picture

--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@
 				<div class="bars">
 
 				   <ul class="skills">
-					   <li><span class="bar-expand photoshop"></span><em>IntelliJ</em></li>
-                  <li><span class="bar-expand illustrator"></span><em>Visual Studio</em></li>
-						<li><span class="bar-expand wordpress"></span><em>Java, Python, C++</em></li>
+					   <li><span class="bar-expand photoshop"></span><em>Java</em></li>
+                  <li><span class="bar-expand illustrator"></span><em>.NET Core</em></li>
+						<li><span class="bar-expand wordpress"></span><em>Python, C++, C#, C</em></li>
 						<li><span class="bar-expand css"></span><em>HTML, CSS, JavaScript</em></li>
 						<li><span class="bar-expand html5"></span><em>SQL, MongoDB</em></li>
                   <li><span class="bar-expand jquery"></span><em>GODOT</em></li>
@@ -267,15 +267,15 @@
 
                    <div class="twelve columns">
 
-                       <h3>Slay the Dragon</h3>
-                       <p class="info"> Programming 1<span>&bull;</span> <em class="date">High School</em></p>
+                       <h3>Senior Capstone: CME Quest Adventures (Client: Stanford CME)</h3>
+                       <p class="info"> Software Engineering <span>&bull;</span> <em class="date">Ball State University</em></p>
 
                        <p>
-                           Slay the Dragon was a fully built mobile game that I made as a senior in high school. I did this using MIT App Inventor. It was
-                           a simple game where you play as a bow and arrow at the bottom of the screen and shoot at dragons flying around. I had to
-                           use some physics and geometry to make these player controls and projectiles behave how I wanted. The enemies, or dragons,
-                           had their own behaviors as well. Each level they would fly in different patterns and shoot different types of projectiles at
-                           you. The game was fleshed out with three levels and a bonus level for beating the game. The bonus level you would play as the dragon.
+                           Working in a team of four other classmates we used Godot Game Engine, Firebase, and itch.io to create
+                           a digital escape room game that reinforces concepts used by professionals in the field of CME
+                           (Continuing Medical Education). The game is hosted publicly on itch.io. It has a main menu, custom
+                           illustrations, a well designed UI, and two full length playable escape rooms. This project utilized
+                           feature branching on github, and was developed through 5 iterations.
                        </p>
 
                    </div>
@@ -286,42 +286,57 @@
 
                    <div class="twelve columns">
 
-                       <h3>Mindfulness</h3>
-                       <p class="info">Programming Fundamentals<span>&bull;</span> <em class="date">Freshman Year: Ball State University</em></p>
+                       <h3>Bus Shuttle Web Application: .NET Core</h3>
+                       <p class="info"> Multi Tier Web Architectures <span>&bull;</span> <em class="date">Ball State University</em></p>
 
                        <p>
-                           Mindfulness was my end of the year project for the intro programming class. We used Jython to manipulate pixels
-                           in image files. The goal of the project was to create an interesting artwork from images, similar to how you
-                           might in Photoshop, just using code. We were judged on how clean and efficient our code was, as well as how
-                           good the product looked aesthetically. My project was an image of a man meditating. It was mirrored vertically,
-                           with the bottom half being a negative of the photo. The top half was separated into layers of rectangles with
-                           different colors, and there was an eye added to the man's forehead. My project made it into the display at the end
-                           of the year.
+                           Using Microsoft's .NET Framework I created a website that performs CRUD operations on an SQLite Database. This application
+                           follows standard structure for web applications. I used C#, Html, Css, and Javascript to create this application. It has
+                           authentication and authorization for registered users, a customized UI design, and multiple pages for different operations.
+                           It is modeled after a similar application used to manage Ball State University's bus routes.
                        </p>
 
                    </div>
 
                </div> <!-- item end -->
+           </div> <!-- item end -->
 
-               <div class="row item">
+           <div class="row item">
 
-                   <div class="twelve columns">
+               <div class="twelve columns">
 
-                       <h3>Online Shopping Program</h3>
-                       <p class="info">Database Design<span>&bull;</span> <em class="date">Junior Year: Ball State University</em></p>
+                   <h3>Connect Four AI</h3>
+                   <p class="info">Fundamentals of AI<span>&bull;</span> <em class="date">Ball State University</em></p>
 
-                       <p>
-                           This was the third project in our Database Design class. I used mySQL and Python to create a program where
-                           the user could create an account, search products by category or product ID, add or remove products from their cart, 
-                           or exit the program. User account info would be entered each time the program ran, and their cart would be saved.
-                           There was no GUI, as this was an assignment graded on functionality. The program would connect to my database, hosted
-                           locally on my laptop, and then it search, add, and remove data from that database as needed.
-                       </p>
+                   <p>
+                       A classmate and I decided to make a Connect Four bot as our final project in this class. We used Java
+                       to create a program that uses the MiniMax Search algorithm to find the best possible move against its
+                       opponent, which is the user. This project was really interesting to think about, but the bot is unbeatable.
+                   </p>
 
-                   </div>
+               </div>
 
-               </div> <!-- item end -->
-           </div> <!-- main-col end -->
+           </div> <!-- item end -->
+
+           <div class="row item">
+
+               <div class="twelve columns">
+
+                   <h3>Online Shopping Program</h3>
+                   <p class="info">Database Design<span>&bull;</span> <em class="date">Junior Year: Ball State University</em></p>
+
+                   <p>
+                       This was the third project in our Database Design class. I used mySQL and Python to create a program where
+                       the user could create an account, search products by category or product ID, add or remove products from their cart,
+                       or exit the program. User account info would be entered each time the program ran, and their cart would be saved.
+                       There was no GUI, as this was an assignment graded on functionality. The program would connect to my database, hosted
+                       locally on my laptop, and then it search, add, and remove data from that database as needed.
+                   </p>
+
+               </div>
+
+           </div> <!-- item end -->
+       </div> <!-- main-col end -->
 
        </div> <!-- End Work -->
 
