--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">I'm Micah Harker.</h1>
-            <h3>I'm an Indiana based <span>software developer</span>, building creative solutions for many software needs. Let's <a class="smoothscroll" href="#about">start scrolling</a>
+            <h3>I'm an Indiana based <span>software developer</span>, building creative solutions for many software needs.<a class="smoothscroll" href="#about">Start scrolling</a>
             and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
             <ul class="social">
@@ -84,7 +84,7 @@
 
             <h2>About Me</h2>
 
-            <p>Hello! I'm Micah Harker. I'm a 24 year old college student in their senior year of Bachelor's Degree in Computer Science.
+            <p>Hello! I'm Micah Harker. I'm a 24 year old software developer who just finished a Bachelor's Degree in Computer Science.
              I've been coding since I was a teenager and I'm excited to turn it into a career. I've done all sorts of different projects,
              ranging from robotics, to websites, to game programming. I love music, the outdoors, video games, and my wonderful cat Analise.
             </p>
@@ -338,7 +338,7 @@
            </div> <!-- item end -->
        </div> <!-- main-col end -->
 
-       </div> <!-- End Work -->
+ <!-- End Work -->
 
 
 
