Edit photo size and project section

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 
        <div class="row work">
 
-           <div class="three columns header-col">
+           <div>
                <h1><span>Projects</span></h1>
            </div>
 
