--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">I'm Micah Harker.</h1>
-            <h3>I'm an Indiana based <span>software developer</span>, building creative solutions for many software needs.<a class="smoothscroll" href="#about">Start scrolling</a>
+            <h3>I'm an Indiana based <span>software developer</span>, building creative solutions for many software needs.<a class="smoothscroll" href="#about"> Start scrolling</a>
             and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
             <ul class="social">
@@ -306,7 +306,7 @@
                <div class="twelve columns">
 
                    <h3>Connect Four AI</h3>
-                   <p class="info">Fundamentals of AI<span>&bull;</span> <em class="date">Ball State University</em></p>
+                   <p class="info"> Fundamentals of AI <span>&bull;</span> <em class="date">Ball State University</em></p>
 
                    <p>
                        A classmate and I decided to make a Connect Four bot as our final project in this class. We used Java
@@ -323,7 +323,7 @@
                <div class="twelve columns">
 
                    <h3>Online Shopping Program</h3>
-                   <p class="info">Database Design<span>&bull;</span> <em class="date">Junior Year: Ball State University</em></p>
+                   <p class="info"> Database Design <span>&bull;</span> <em class="date">Ball State University</em></p>
 
                    <p>
                        This was the third project in our Database Design class. I used mySQL and Python to create a program where
